Fixed modals z-index bug

--- a/sass/components/_general.scss
+++ b/sass/components/_general.scss
@@ -460,7 +460,7 @@ input[type=range]::-ms-fill-upper {
         position: fixed;
             left: 0;
             top: 0;
-        z-index: 8888;
+        z-index: 10000;
         width: 100%;
         height: 100%;
         background-color: rgb(0,0,0);
