--- a/sass/components/_top_bar.scss
+++ b/sass/components/_top_bar.scss
@@ -8,7 +8,7 @@
     height: 60px;
     border-bottom: 1px solid $box--line;
     background-color: $menu--text--hover;
-    z-index: 9999999999999999999;
+    z-index: 1000;
 }
 
 .topbar__wallet {
